# Datalyst

./: .gitignore  LICENSE.md  README.md  package-lock.json  package.json
public/images/logo/: auth-logo.sk2
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src/components/auth/: ForgotPasswordForm.tsx  ResetPasswordForm.tsx  SignInForm.tsx  SignUpForm.tsx
src/components/common/: PageBreadCrumb.tsx
src/components/header/: Header.tsx  NotificationDropdown.tsx
src/context/: AuthContext.tsx  SidebarContext.tsx
src/hooks/: useGoBack.ts
src/layout/: AppHeader.tsx  AppLayout.tsx  AppSidebar.tsx
src/pages/AuthPages/: AuthPageLayout.tsx  ForgotPassword.tsx  ResetPassword.tsx
src/pages/Dashboard/: Home.tsx
src/pages/Forms/: FormElements.tsx
src/pages/OtherPage/: NotFound.tsx
src/pages/UiElements/: Alerts.tsx
src/utils/: utils.ts
